--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <button>SHOP NOW</button>
         </div>
         <div class="img1">
-            <img src="img/best summer.png">
+            <img src="best summer.png">
         </div>
     </div>
     <br><br>
     <div class="box2">
         <div class="img-container">
-            <img src="img/newcollection.jpg" alt="">
+            <img src="newcollection.jpg" alt="">
             <div class="img-text">
                 Super Sale
                 <p>New Collection</p>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="img-container">
-            <img src="img/new season.jpg" alt="">
+            <img src="new season.jpg" alt="">
             <div class="img-text"> Super Sale
                 <p>New Season</p>
                 Shop Now
@@ -90,7 +90,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress1.jpg" alt="">
+                <img src="dress1.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -105,7 +105,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress2.jpg" alt="">
+                <img src="dress2.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -120,7 +120,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress3.jpg" alt="">
+                <img src="dress3.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -136,7 +136,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress4.jpg" alt="">
+                <img src="dress4.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -154,7 +154,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress1.jpg" alt="">
+                <img src="dress1.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -169,7 +169,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress2.jpg" alt="">
+                <img src="dress2.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -184,7 +184,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress3.jpg" alt="">
+                <img src="dress3.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -199,7 +199,7 @@
                     <i class="fa-solid fa-magnifying-glass-plus icon-square"></i>
                     <i class="fa-regular fa-heart icon-square"></i>
                 </div>
-                <img src="img/dress4.jpg" alt="">
+                <img src="dress4.jpg" alt="">
             </div>
             <div class="text">
                 Blue Dress For Women<br>
@@ -209,7 +209,7 @@
     </div>
     <div class="box3">
         <div class="img2">
-            <img src="img/best summer.png" alt="">
+            <img src="best summer.png" alt="">
         </div>
         <div class="text2">
             <p>Best Summer Collection</p>
@@ -281,5 +281,6 @@
 
 
 </body>
+
 
 </html>
